--- a/src/main/resources/templates/site/letter.html
+++ b/src/main/resources/templates/site/letter.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/global.css}"/>
-	<link rel="stylesheet" th:href="@{/css/letter.css}"/>
+	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/letter.css}" />
 	<title>牛客网-私信列表</title>
 </head>
 <body>
@@ -71,9 +71,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link position-relative" th:href="@{/notice/list}">
-								系统通知<span class="badge badge-danger" th:text="${noticeUnreadCount}" th:if="${noticeUnreadCount!=0}">27</span>
-							</a>
+							<a class="nav-link position-relative" href="notice.html">系统通知<span class="badge badge-danger">27</span></a>
 						</li>
 					</ul>
 					<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#sendModal">发私信</button>
@@ -125,18 +123,15 @@
 				<ul class="list-unstyled">
 					<li class="media pb-3 pt-3 mb-3 border-bottom position-relative" th:each="map:${conversations}">
 						<span class="badge badge-danger" th:text="${map.unreadCount}" th:if="${map.unreadCount!=0}">3</span>
-						<a th:href="@{|/user/profile/${map.target.id}|}">
-							<img th:src="${map.target.headerUrl}" class="mr-4 rounded-circle user-header" alt="用户头像">
+						<a href="profile.html">
+							<img th:src="${map.target.headerUrl}" class="mr-4 rounded-circle user-header" alt="用户头像" >
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<span class="text-success" th:utext="${map.target.username}">落基山脉下的闲人</span>
-								<span class="float-right text-muted font-size-12"
-									  th:text="${#dates.format(map.conversation.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25
-                           		</span>
+								<span class="float-right text-muted font-size-12" th:text="${#dates.format(map.conversation.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25</span>
 							</h6>
 							<div>
-								<!--变量拼接  | 常量 ${}} |   ->  |/letter/detail/${map.conversation.conversationId}|}  -->
 								<a th:href="@{|/letter/detail/${map.conversation.conversationId}|}" th:utext="${map.conversation.content}">米粉车, 你来吧!</a>
 								<ul class="d-inline font-size-12 float-right">
 									<li class="d-inline ml-2"><a href="#" class="text-primary">共<i th:text="${map.letterCount}">5</i>条会话</a></li>
