--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
-	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
 	<link rel="stylesheet" th:href="@{/css/login.css}" />
 	<title>牛客网-登录</title>
@@ -68,8 +68,7 @@
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
 							<input type="text" th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
-								   th:value="${param.username}"
-								   id="username" name="username" placeholder="请输入您的账号!" required>
+								   th:value="${param.username}" id="username" name="username" placeholder="请输入您的账号!" required>
 							<div class="invalid-feedback" th:text="${usernameMsg}">
 								该账号不存在!
 							</div>
@@ -79,18 +78,16 @@
 						<label for="password" class="col-sm-2 col-form-label text-right">密码:</label>
 						<div class="col-sm-10">
 							<input type="password" th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|"
-								   th:value="${param.password}"
-								   id="password" name="password" placeholder="请输入您的密码!" required>
+								   th:value="${param.password}" id="password" name="password" placeholder="请输入您的密码!" required>
 							<div class="invalid-feedback" th:text="${passwordMsg}">
 								密码长度不能小于8位!
-							</div>
+							</div>							
 						</div>
 					</div>
 					<div class="form-group row mt-4">
 						<label for="verifycode" class="col-sm-2 col-form-label text-right">验证码:</label>
 						<div class="col-sm-6">
-							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}|"
-								   id="verifycode" name="code" placeholder="请输入验证码!">
+							<input type="text" th:class="|form-control ${codeMsg!=null?'is-invalid':''}|" id="verifycode" name="code" placeholder="请输入验证码!">
 							<div class="invalid-feedback" th:text="${codeMsg}">
 								验证码不正确!
 							</div>
@@ -99,23 +96,22 @@
 							<img th:src="@{/kaptcha}" id="kaptcha" style="width:100px;height:40px;" class="mr-2"/>
 							<a href="javascript:refresh_kaptcha();" class="font-size-12 align-bottom">刷新验证码</a>
 						</div>
-					</div>
+					</div>				
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10">
-							<input type="checkbox" id="remember-me" name="rememberme"
-								   th:checked="${param.rememberme}">
+							<input type="checkbox" id="remember-me" th:checked="${param.rememberme}" name="rememberme">
 							<label class="form-check-label" for="remember-me">记住我</label>
 							<a th:href="@{/forget}" class="text-danger float-right">忘记密码?</a>
 						</div>
-					</div>
+					</div>				
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10 text-center">
 							<button type="submit" class="btn btn-info text-white form-control">立即登录</button>
 						</div>
 					</div>
-				</form>
+				</form>				
 			</div>
 		</div>
 
@@ -181,14 +177,14 @@
 			</div>
 		</footer>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
-	<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
-
 	<script>
 		function refresh_kaptcha() {
-			//加随机数欺骗浏览器访问路劲变了
+			// global.js
+			// var CONTEXT_PATH = "/community";
 			var path = CONTEXT_PATH + "/kaptcha?p=" + Math.random();
 			$("#kaptcha").attr("src", path);
 		}
