--- a/src/main/resources/templates/site/my-post.html
+++ b/src/main/resources/templates/site/my-post.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/global.css}"/>
 	<title>牛客网-个人主页</title>
 </head>
 <body>
@@ -68,23 +68,23 @@
 						<a class="nav-link" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" th:href="@{|/user/post/${user.id}|}"><b th:text="${subject}">我</b>发布的帖子</a>
+						<a class="nav-link active" th:href="@{|/user/mypost/${user.id}|}" th:text="${loginUser==null||loginUser.id!=user.id?'TA的帖子':'我的帖子'}">我的帖子</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{|/user/reply/${user.id}|}"><b th:text="${subject}">我</b>回复的帖子</a>
+						<a class="nav-link" th:href="@{|/user/myreply/${user.id}|}" th:text="${loginUser==null||loginUser.id!=user.id?'TA的回复':'我的回复'}">我的回复</a>
 					</li>
 				</ul>
 				<a th:href="@{|/user/profile/${user.id}|}" class="text-muted position-absolute rt-0">返回个人主页&gt;</a>
 			</div>
-			<!-- 帖子 -->
+			<!-- 我的帖子 -->
 			<div class="mt-4">
-				<h6><b class="square"></b> 发布的帖子(<b th:text="${postCount}">93</b>)</h6>
+				<h6><b class="square"></b> 发布的帖子(<i th:text="${page.rows}">93</i>)</h6>
 				<ul class="list-unstyled mt-4 pl-3 pr-3">
 					<li class="border-bottom pb-3 mt-4" th:each="map:${discussPosts}">
 						<div class="font-size-16 text-info">
-							<a th:href="@{|/discuss/detail/${map.post.id}|}" class="text-info" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>
+							<a th:href="@{|/discuss/detail/${map.discussPost.id}|}" th:utext="${map.discussPost.title}" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
 						</div>
-						<div class="mt-1 font-size-14" th:utext="${map.post.content}">
+						<div class="mt-1 font-size-14" th:utext="${map.discussPost.content}">
 							金三银四的金三已经到了，你还沉浸在过年的喜悦中吗？
 							如果是，那我要让你清醒一下了：目前大部分公司已经开启了内推，正式网申也将在3月份陆续开始，金三银四，春招的求职黄金时期已经来啦！！！
 							再不准备，作为19应届生的你可能就找不到工作了。。。作为20届实习生的你可能就找不到实习了。。。
@@ -93,8 +93,7 @@
 							跟左程云老师学算法，不仅能解决以上所有问题，还能在短时间内得到最大程度的提升！！！
 						</div>
 						<div class="text-right font-size-12 text-muted">
-							赞 <i class="mr-3" th:text="${map.likeCount}">11</i> 发布于
-							<b th:text="${#dates.format(map.post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 10:10:10</b>
+							赞 <i class="mr-3" th:text="${map.likeCount}">11</i> 发布于 <b th:text="${#dates.format(map.discussPost.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 10:10:10</b>
 						</div>
 					</li>
 				</ul>
