--- a/src/main/resources/templates/site/my-reply.html
+++ b/src/main/resources/templates/site/my-reply.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/global.css}"/>
 	<title>牛客网-个人主页</title>
 </head>
 <body>
@@ -68,27 +68,27 @@
 						<a class="nav-link" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{|/user/post/${user.id}|}"><b th:text="${subject}">我</b>发布的帖子</a>
+						<a class="nav-link" th:href="@{|/user/mypost/${user.id}|}" th:text="${loginUser==null||loginUser.id!=user.id?'TA的帖子':'我的帖子'}">我的帖子</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" th:href="@{|/user/reply/${user.id}|}"><b th:text="${subject}">我</b>回复的帖子</a>
+						<a class="nav-link active" th:href="@{|/user/myreply/${user.id}|}" th:text="${loginUser==null||loginUser.id!=user.id?'TA的回复':'我的回复'}">我的回复</a>
 					</li>
 				</ul>
 				<a th:href="@{|/user/profile/${user.id}|}" class="text-muted position-absolute rt-0">返回个人主页&gt;</a>
 			</div>
 			<!-- 我的回复 -->
 			<div class="mt-4">
-				<h6><b class="square"></b> 回复的帖子(<b th:text="${postCount}">379</b>)</h6>
+				<h6><b class="square"></b> 回复的帖子(<i th:text="${page.rows}">379</i>)</h6>
 				<ul class="list-unstyled mt-4 pl-3 pr-3">
-					<li class="border-bottom pb-3 mt-4" th:each="result:${replyPost}">
+					<li class="border-bottom pb-3 mt-4" th:each="map:${comments}">
 						<div class="font-size-16 text-info">
-							<a th:href="@{|/discuss/detail/${result.postId}|}" class="text-info" th:utext="${result.postTitle}">备战春招，面试刷题跟他复习，一个月全搞定！</a>
+							<a th:href="@{|/discuss/detail/${map.discussPost.id}|}" th:utext="${map.discussPost.title}" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
 						</div>
-						<div class="mt-1 font-size-14" th:utext="${result.replyContent}">
+						<div class="mt-1 font-size-14" th:utext="${map.comment.content}">
 							顶顶顶!
 						</div>
 						<div class="text-right font-size-12 text-muted">
-							回复于 <b th:text="${#dates.format(result.replyCreateTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 10:10:10</b>
+							回复于 <b th:text="${#dates.format(map.comment.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 10:10:10</b>
 						</div>
 					</li>
 				</ul>
